Fix container on firefox.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ a {
 .container {
   padding: 20px;
   width: 50%;
-  max-height: 100%;
+  max-height: 100vh;
   overflow: scroll;
 }
 
